k8s/myapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
      - name: php-app
        image: vikasbandili007/tours:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: php-storage
          mountPath: /var/www/html/storage
      volumes:
      - name: php-storage
        persistentVolumeClaim:
          claimName: php-app-pvc
