k8s/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app-service
spec:
  selector:
    app: php-app
  ports:
    - protocol: TCP
      port: 8081        
      targetPort: 80    
      nodePort: 30081  
  type: NodePort
